--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-# The Basics
+# The Fundamentals
 
-A home for answers to questions concerning the basics of computer science, programming, and software engineering.
+A home for answers to questions concerning the fundamental concepts of computer science, programming, and software engineering.
 
